--- a/index.html
+++ b/index.html
@@ -68,26 +68,42 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/Teaching_jalama_hibah_ganie_cropped.jpg" alt="" /></span>
-								<span>Photo credit: Hibah Ganie</span>
-								<p>My name is Iris Holzer (she/her), and I am an <a href="https://es.ucsb.edu/people/iris-holzer">Assistant Teaching Professor</a> in the Environmental Studies Program at UC Santa Barbara, where I specialize in soils and environmental chemistry. I completed my Ph.D. in <a href="https://soils.ucdavis.edu/">Soils & Biogeochemistry</a> at UC Davis in 2023, and my research focuses on rock weathering, soil formation, and carbon dynamics in the soils of agricultural and natural systems. One major area of emphasis in my work is the study of enhanced rock weathering for carbon removal.</p>
+								<p>My name is Iris Holzer (she/her), and I am an <a href="https://es.ucsb.edu/people/iris-holzer">Assistant Teaching Professor</a> in the Environmental Studies Program at UC Santa Barbara, where I specialize in soils and environmental chemistry.</p>
 								<p>In my teaching and research, I am committed to fostering equitable access to science and the outdoors, particularly via immersive field experiences that prioritize community building, safety, and place-based learning. I was recognized for this work with the UC Davis Chancellor’s Award for Excellence in Mentoring Undergraduate Research in 2022. Now at UCSB, I am working to lower barriers for student participation  in field-based opportunities, including by reducing or eliminating costs.</p>
+								<p>I completed my Ph.D. in <a href="https://soils.ucdavis.edu/">Soils & Biogeochemistry</a> at UC Davis in 2023, and my research focuses on rock weathering, soil formation, and carbon dynamics in the soils of agricultural and natural systems. Recently, I have been focusing on enhanced rock weathering for carbon removal.</p>
 								<p>Prior to graduate school, I earned my B.A. in Geology from Scripps College via the <a href="https://www.pomona.edu/academics/departments/geology">Pomona College Geology Department</a>. Born in Mississippi and raised in Missouri, I have spent the last decade teaching and learning across California’s diverse landscapes.</p>
+								<p>Photo credit: Hibah Ganie</p>
 							</article>
 
 						<!-- Teaching -->
 							<article id="teaching">
 								<h2 class="major">Teaching</h2>
-								<span class="image main"><img src="images/20211206_082645.jpeg" alt="" /></span>
-								<p>As a Ph.D. candidate with <a href="https://www.bzhoulton.com/">Ben Houlton</a>, I study rock weathering as a potential tool for increasing inorganic carbon storage. Through my research with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a>, I examine enhanced silicate weathering, where crushed minerals, from rocks like basalt and olivine-bearing dunite, are added to soils and react with dissolved carbon dioxide. Using field trials across California and smaller mesocosm studies, I assess the carbon sequestration potential of enhanced rock weathering in soils and soil water and its impacts on crop and soil health. A recent review from our group is available <a href="https://www.frontiersin.org/articles/10.3389/fclim.2022.970429/full">here</a>.</p>
-								<p>Beyond studying applications of mineral weathering, I also research weathering in natural systems. Using soil profiles atop nitrogen-bearing rocks, I examine the role of rock-derived nitrogen as a critical nutrient pool to terrestrial ecosystems, controlling aspects of ecosystem functioning and carbon storage at a global scale. In the forests of Northwestern California, I look at the release of these nitrogen pools across climates, furthering our understanding of how this essential nutrient becomes available to ecosystems, supporting forest growth and carbon uptake.</p>
-								<p>My diverse research background has prepared me for projects at the nexus of geology, agriculture, hydrology, and soil science. I have studied soil formation in California deserts, groundwater geochemistry in New Zealand, the transport of micro-pollutants at the U.S. Geological Survey, and crop uptake of trace metals in North Carolina. You can read more about my work on the geochemistry of the Burgess Shale in <a href="https://doi.org/10.2110/palo.2019.026">this publication</a> and find more links to my research on my <a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao">Google Scholar profile</a>.</p>
+								<span class="image main"><img src="images/20220420_162902.jpeg" alt="" /></span>
+								<p>Nothing motivates and inspires me more than teaching and learning alongside students. In my teaching and mentoring, I aim to engage students, equipping them with a <b>versatile, interdisciplinary scientific foundation</b> that supports their future academic and professional success. </p>
+								<p>At UCSB, I teach the following courses:</p>
+									<ul>
+										<li><b>Principles of Soil Science</b> (ENVS/GEOG 114A)</li>
+										<li><b>Soils of California: Formation, Morphology, and Management</b> (ENVS/GEOG 114B - major emphasis on soils descriptions in the field; course rated 5.0/5.0 overall in student evals with 100% response rate)</li>
+										<li><b>Colloquium on Current Topics in Environmental Studies</b> (ENVS 190)</li>
+										<li><b>Environmental Chemistry sequence</b> (ENVS 15A, 15B, 15BL - starting in 2025!)</li>
+									</ul>
+								<p>I have also served as a teaching assistant for the following courses:</p>
+										<li>Introduction to Geology</li>
+										<li>Earth History</li>
+										<li>Mineralogy</li>
+										<li>Soils in Our Environment</li>
+										<li>Soils, Water and Civilizations</li>
+										<li>Soil Genesis, Morphology, and Classification</li>
+									</ul>
+								<p>This spring, I secured funding to pay for < a href="https://www.fieldfutures.org/">FieldFutures</a> training on preventing sexual harassment and assault in the field for Soils of California. In a post-training survey, 91% of students said they anticipate this training definitely being valuable or useful in their future work. One student shared that the training “provided a lot of information that can be generalized to other aspects of field work such as safety, power dynamics, and following proper protocol”. This created a starting point for class discussions of field safety, communication, and planning, and students shared that they felt newly empowered to ask about field safety plans in upcoming internships, courses, or field-based research.</p>
+								<p>I am continuing to seek funding to offer these and other kinds of field safety trainings in future courses and to reduce costs of field courses for students. Please reach out if you’d like to chat!</p>
 							</article>
 
 						<!-- Research -->
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/20220420_162902.jpeg" alt="" /></span>
-								<p>Science exists for us all, whether we are artists or microbiologists, and effective science education requires relating topics to students’ existing interests. As a teacher, I love delving into advanced subject matter, but I am most excited by introducing students to unfamiliar disciplines, opening new spheres for building knowledge.<p/>
+								<p> in progress -- Science exists for us all, whether we are artists or microbiologists, and effective science education requires relating topics to students’ existing interests. As a teacher, I love delving into advanced subject matter, but I am most excited by introducing students to unfamiliar disciplines, opening new spheres for building knowledge.<p/>
 								<p>At UC Davis and Pomona College, I have served as the teaching assistant for six classes, including upper division, discipline-specific courses and introductory-level courses for science and non-science majors. These courses include:</p>
 									<ul>
 										<li>Introduction to Geology</li>
@@ -99,6 +115,10 @@
 									</ul>
 								<p>Whether taking Soil Genesis students to describe their first soil pits mere steps from their dorms or teaching high schoolers about terrestrial carbon storage amidst giant sequoias, I support student-centered learning using location-specific lessons and safe field introductions. Outside the classroom, I have advised three senior honors theses and mentored more than a dozen paid student interns, frequently in their first lab or field positions. In 2022 I was honored to receive the <i>UC Davis Chancellor’s Award for Excellence in Mentoring Undergraduate Research</i>.</p>
 								<p>As a scientist and educator, I am committed to the ongoing work required to address systemic bias and racism in the earth sciences. Those of us in positions of power have a particular responsibility to identify and remove barriers to participation for our students, push for changes to institutional cultures, and teach in culturally responsive ways. This work is essential to support the next generation of climate scientists, activists, and policymakers.</p>
+								<span class="image main"><img src="images/20211206_082645.jpeg" alt="" /></span>
+								<p>As a Ph.D. candidate with <a href="https://www.bzhoulton.com/">Ben Houlton</a>, I study rock weathering as a potential tool for increasing inorganic carbon storage. Through my research with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a>, I examine enhanced silicate weathering, where crushed minerals, from rocks like basalt and olivine-bearing dunite, are added to soils and react with dissolved carbon dioxide. Using field trials across California and smaller mesocosm studies, I assess the carbon sequestration potential of enhanced rock weathering in soils and soil water and its impacts on crop and soil health. A recent review from our group is available <a href="https://www.frontiersin.org/articles/10.3389/fclim.2022.970429/full">here</a>.</p>
+								<p>Beyond studying applications of mineral weathering, I also research weathering in natural systems. Using soil profiles atop nitrogen-bearing rocks, I examine the role of rock-derived nitrogen as a critical nutrient pool to terrestrial ecosystems, controlling aspects of ecosystem functioning and carbon storage at a global scale. In the forests of Northwestern California, I look at the release of these nitrogen pools across climates, furthering our understanding of how this essential nutrient becomes available to ecosystems, supporting forest growth and carbon uptake.</p>
+								<p>My diverse research background has prepared me for projects at the nexus of geology, agriculture, hydrology, and soil science. I have studied soil formation in California deserts, groundwater geochemistry in New Zealand, the transport of micro-pollutants at the U.S. Geological Survey, and crop uptake of trace metals in North Carolina. You can read more about my work on the geochemistry of the Burgess Shale in <a href="https://doi.org/10.2110/palo.2019.026">this publication</a> and find more links to my research on my <a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao">Google Scholar profile</a>.</p>
 							</article>
 
 						<!-- Contact -->
