--- a/index.html
+++ b/index.html
@@ -80,14 +80,15 @@
 								<h2 class="major">Teaching</h2>
 								<span class="image main"><img src="images/20220420_162902.jpeg" alt="" /></span>
 								<p>Nothing motivates and inspires me more than teaching and learning alongside students. In my teaching and mentoring, I aim to engage students, equipping them with a <b>versatile, interdisciplinary scientific foundation</b> that supports their future academic and professional success. </p>
-								<p>At UCSB, I teach the following courses:</p>
+								<p>At UCSB, I teach the following courses:
 									<ul>
 										<li><b>Principles of Soil Science</b> (ENVS/GEOG 114A)</li>
 										<li><b>Soils of California: Formation, Morphology, and Management</b> (ENVS/GEOG 114B - major emphasis on soils descriptions in the field; course rated 5.0/5.0 overall in student evals with 100% response rate)</li>
 										<li><b>Colloquium on Current Topics in Environmental Studies</b> (ENVS 190)</li>
 										<li><b>Environmental Chemistry sequence</b> (ENVS 15A, 15B, 15BL - starting in 2025!)</li>
 									</ul>
-								<p>I have also served as a teaching assistant for the following courses:</p>
+								</p>
+								<p>Previously, at UC Davis and Pomona, I served as a teaching assistant for courses across soils and earth science:
 										<li>Introduction to Geology</li>
 										<li>Earth History</li>
 										<li>Mineralogy</li>
@@ -95,7 +96,9 @@
 										<li>Soils, Water and Civilizations</li>
 										<li>Soil Genesis, Morphology, and Classification</li>
 									</ul>
-								<p>This spring, I secured funding to pay for < a href="https://www.fieldfutures.org/">FieldFutures</a> training on preventing sexual harassment and assault in the field for Soils of California. In a post-training survey, 91% of students said they anticipate this training definitely being valuable or useful in their future work. One student shared that the training “provided a lot of information that can be generalized to other aspects of field work such as safety, power dynamics, and following proper protocol”. This created a starting point for class discussions of field safety, communication, and planning, and students shared that they felt newly empowered to ask about field safety plans in upcoming internships, courses, or field-based research.</p>
+								</p>
+								<p>Whether taking students to describe their first soil pits mere steps from their dorms or teaching high schoolers about terrestrial carbon storage amidst giant sequoias, I emphasize <b>inclusive, place-based learning</b> that starts with <b>safe field environments</b>. The field continues to be a frequent site of racism, sexism, and ableism, and unequal support for underrepresented students contributes to hostile exclusion from majors, internships, and jobs.</p>
+								<p>This spring, I secured funding to pay for <a href="https://www.fieldfutures.org/">FieldFutures</a> training on preventing sexual harassment and assault in the field for Soils of California. In a post-training survey, 91% of students said they anticipate this training definitely being valuable or useful in their future work. One student shared that the training “provided a lot of information that can be generalized to other aspects of field work such as safety, power dynamics, and following proper protocol”. This created a starting point for class discussions of field safety, communication, and planning, and students shared that they felt newly empowered to ask about field safety plans in upcoming internships, courses, or field-based research.</p>
 								<p>I am continuing to seek funding to offer these and other kinds of field safety trainings in future courses and to reduce costs of field courses for students. Please reach out if you’d like to chat!</p>
 							</article>
 
@@ -124,7 +127,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p>You can contact me at <b>irisholzer 'at' ucsb 'dot' edu</b>. I'm always excited to chat about scientific collaborations, courses, or ways to support our field programs.</p>
+								<p>You can contact me at <b>irisholzer 'at' ucsb 'dot' edu</b>. I'm always excited to chat about scientific collaborations, undergraduate research projects, courses, or ways to support our field programs.</p>
 								<ul class="icons">
 									<li><a href="https://twitter.com/iris_holzer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
