--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								<p>At UCSB, I teach the following courses:
 									<ul>
 										<li><b>Principles of Soil Science</b> (ENVS/GEOG 114A)</li>
-										<li><b>Soils of California: Formation, Morphology, and Management</b> (ENVS/GEOG 114B - major emphasis on soils descriptions in the field; course rated 5.0/5.0 overall in student evals with 100% response rate)</li>
+										<li><b>Soils of California: Formation, Morphology, and Management</b> (ENVS/GEOG 114B - This course places a major emphasis on soils descriptions in the field and was rated 5.0/5.0 overall in student evals with a 100% response rate!)</li>
 										<li><b>Colloquium on Current Topics in Environmental Studies</b> (ENVS 190)</li>
 										<li><b>Environmental Chemistry sequence</b> (ENVS 15A, 15B, 15BL - starting in 2025!)</li>
 									</ul>
