--- a/index.html
+++ b/index.html
@@ -373,7 +373,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Iris Holzer. Design: <a href="https://html5up.net">HTML5 UP</a>. Contact: irisholzer 'at' ucsb 'dot' edu. </p>
+						<p>Contact info available <a href="https://es.ucsb.edu/people/iris-holzer">here</a>.</p> 
+						<p class="copyright">&copy; Iris Holzer. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
