--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<li><a href="#about">About</a></li>
 								<li><a href="#teaching">Teaching</a></li>
 								<li><a href="#research">Research</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#contact">Photos</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -68,10 +68,16 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/Teaching_jalama_hibah_ganie_cropped.jpg" alt="" /></span>
-								<p>My name is Iris Holzer (she/her), and I am an <a href="https://es.ucsb.edu/people/iris-holzer">Assistant Teaching Professor</a> in the Environmental Studies Program at UC Santa Barbara, where I specialize in soils and environmental chemistry.</p>
+								<p>My name is Iris Holzer (she/her), and I am an <a href="https://es.ucsb.edu/people/iris-holzer">Assistant Teaching Professor</a> in the Environmental Studies Program at UC Santa Barbara, where I specialize in soils and environmental chemistry. My research focuses on rock weathering, soil formation, and carbon dynamics in the soils of agricultural and natural systems, including enhanced rock weathering for carbon removal.</p>
+								<p>I completed my Ph.D. in <a href="https://soils.ucdavis.edu/">Soils & Biogeochemistry</a> at UC Davis in 2023. Prior to graduate school, I earned my B.A. in Geology from Scripps College via the <a href="https://www.pomona.edu/academics/departments/geology">Pomona College Geology Department</a>. Born in Mississippi and raised in Missouri, I have loved my last 11+ years learning and teaching across California’s diverse landscapes.</p>
 								<p>In my teaching and research, I am committed to fostering equitable access to science and the outdoors, particularly via immersive field experiences that prioritize community building, safety, and place-based learning. I was recognized for this work with the UC Davis Chancellor’s Award for Excellence in Mentoring Undergraduate Research in 2022. Now at UCSB, I am working to lower barriers for student participation  in field-based opportunities, including by reducing or eliminating costs.</p>
-								<p>I completed my Ph.D. in <a href="https://soils.ucdavis.edu/">Soils & Biogeochemistry</a> at UC Davis in 2023, and my research focuses on rock weathering, soil formation, and carbon dynamics in the soils of agricultural and natural systems, including enhanced rock weathering for carbon removal.</p>
-								<p>Prior to graduate school, I earned my B.A. in Geology from Scripps College via the <a href="https://www.pomona.edu/academics/departments/geology">Pomona College Geology Department</a>. Born in Mississippi and raised in Missouri, I have spent the last decade teaching and learning across California’s diverse landscapes.</p>
+								<p>You can find my contact info <a href="https://es.ucsb.edu/people/iris-holzer">here</a>. I'm always excited to chat about scientific collaborations, undergraduate research projects, courses, or ways to support our field programs.</p>
+								<ul class="icons">
+									<li><a href="https://twitter.com/iris_holzer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
+									<li><a href="https://github.com/IrisHolzer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+								
 								<p>Photo credit: Hibah Ganie</p>
 							</article>
 
@@ -115,16 +121,10 @@
 
 							</article>
 
-						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<p>You can contact me at <b>irisholzer 'at' ucsb 'dot' edu</b>. I'm always excited to chat about scientific collaborations, undergraduate research projects, courses, or ways to support our field programs.</p>
-								<ul class="icons">
-									<li><a href="https://twitter.com/iris_holzer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
-									<li><a href="https://github.com/IrisHolzer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-								<span class=" main"><img src="s/IMG_1533.jpg" alt="" /></span>
+						<!-- Photos -->
+							<article id="photos">
+								<h2 class="major">Photos</h2>
+								<span class="image main"><img src="s/IMG_1533.jpg" alt="" /></span>
 							</article>
 
 						<!-- Elements -->
@@ -373,7 +373,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class = "copyright">Contact info available <a href="https://es.ucsb.edu/people/iris-holzer">here</a>.</p> 
+						<p class = "copyright"><a href="https://es.ucsb.edu/people/iris-holzer">Contact information</a>.</p> 
 						<p class="copyright">&copy; Iris Holzer. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
