--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<li><a href="#about">About</a></li>
 								<li><a href="#teaching">Teaching</a></li>
 								<li><a href="#research">Research</a></li>
-								<li><a href="#contact">Photos</a></li>
+								<li><a href="#photos">Photos</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
