--- a/index.html
+++ b/index.html
@@ -126,10 +126,12 @@
 								<h2 class="major">Photos</h2>
 								<span class="image main"><img src="images/soil_114B_students.jpg" alt="" /></span>
 								<p>Soils of California students recording site information and measuring soil pH.</p> 
-								<span class="image main"><img src="images/aquox_puertorico.HEIC" alt="" /></span>
-								<p>A Humic Haplaquox (Dwarf Series) during a field trip in El Yunque National Forest, led by Manuel Matos. </p> 
-								<span class="image main"><img src="images/soil_color_carpsaltmarsh_ioh.HEIC" alt="" /></span>
+								<span class="image main"><img src="images/aquox_puertorico.jpg" alt="" /></span>
+								<p>A Humic Haplaquox (Dwarf Series) during a field trip in El Yunque National Forest, led by Manuel Matos.</p> 
+								<span class="image main"><img src="images/soil_color_carpsaltmarsh_ioh.jpg" alt="" /></span>
 								<p>Measuring soil color at Carpinteria Salt Marsh Reserve during a field trip.</p> 
+								<span class="image main"><img src="images/gopher_bioturb.jpg" alt="" /></span>
+								<p>Checking out gopher bioturbation and learning about regenerative agriculture during a field day at Jalama Canyon Ranch.</p> 
 								<span class="image main"><img src="images/IMG_1533.jpg" alt="" /></span>
 								<p>A roadcut in Lodi, Mississippi.</p> 
 								
