--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								<h2 class="major">Photos</h2>
 								<span class="image main"><img src="images/soil_114B_students.jpg" alt="" /></span>
 								<p>Soils of California students recording site information and measuring soil pH.</p> 
-								<span class="image main"><img src="images/aquox_puertorico.jpg" alt="" /></span>
+								<p><img src="images/aquox_puertorico.jpg" alt="" /></p>
 								<p>A Humic Haplaquox (Dwarf Series) during a field trip in El Yunque National Forest, led by Manuel Matos.</p> 
 								<span class="image main"><img src="images/soil_color_carpsaltmarsh_ioh.jpg" alt="" /></span>
 								<p>Measuring soil color at Carpinteria Salt Marsh Reserve during a field trip.</p> 
