--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 							<article id="teaching">
 								<h2 class="major">Teaching</h2>
 								<span class="image main"><img src="images/20220420_162902.jpeg" alt="" /></span>
-								<p>Nothing motivates and inspires me more than teaching and learning alongside students. In my teaching and mentoring, I aim to engage students, equipping them with a <b>versatile, interdisciplinary scientific foundation</b> that supports their future academic and professional success. </p>
-								<p>At UCSB, I teach the following courses:
+								<p>Nothing motivates me more than teaching and learning alongside students. Field experiences were transformative for me as an undergrad, and I love getting out into field with classes as much as possible. Across all my classes, I encourage independent inquiry, place-based learning, enthusiasm, and an ethic of care for each other and our world.  </p>
+								<p>The heart of my job is teaching undergraduate courses in soils and environmental chemistry in the Environmenetal Studies Program at UCSB, where a number of my classes are cross-listed in Geography. Presently, I teach the following courses:</p>
 									<ul>
-										<li><b>Principles of Soil Science</b> (ENVS/GEOG 114A)</li>
-										<li><b>Soils of California: Formation, Morphology, and Management</b> (ENVS/GEOG 114B - This course places a major emphasis on soils descriptions in the field and was rated 5.0/5.0 overall in student evals with a 100% response rate!)</li>
-										<li><b>Colloquium on Current Topics in Environmental Studies</b> (ENVS 190)</li>
-										<li><b>Environmental Chemistry sequence</b> (ENVS 15A, 15B, 15BL - starting in 2025!)</li>
+										<li>Principles of Soil Science (ENVS/GEOG 114A)</li>
+										<li>Soils of California: Formation, Morphology, and Management (ENVS/GEOG 114B)</li>
+										<li>Colloquium on Current Topics in Environmental Studies (ENVS 190)</li>
+										<li>Environmental Chemistry sequence (ENVS 15A, 15B, 15BL - starting in 2025!)</li>
 									</ul>
 								</p>
 								<p>Previously, at UC Davis and Pomona, I served as a teaching assistant for courses across soils and earth science:
@@ -96,7 +96,7 @@
 										<li>Soil Genesis, Morphology, and Classification</li>
 									</ul>
 								</p>
-								<p>Whether taking students to describe their first soil pits mere steps from their dorms or teaching high schoolers about terrestrial carbon storage amidst giant sequoias, I emphasize <b>inclusive, place-based learning</b> that starts with <b>safe field environments</b>. The field continues to be a frequent site of racism, sexism, and ableism, and unequal support for underrepresented students contributes to hostile exclusion from majors, internships, and jobs.</p>
+								<p>Whether taking students to describe their first soil pits mere steps from their dorms or teaching about terrestrial carbon storage amidst giant sequoias, I emphasize inclusive, place-based learning that starts with safe field environments. The field continues to be a frequent site of racism, sexism, and ableism, and unequal support for underrepresented students contributes to hostile exclusion from majors, internships, and jobs.</p>
 								<p>This spring, I secured funding for <a href="https://www.fieldfutures.org/">FieldFutures</a> training for one class. In a post-training survey, 91% of students said they anticipate this training definitely being valuable or useful in their future work. One student shared that the training “provided a lot of information that can be generalized to other aspects of field work such as safety, power dynamics, and following proper protocol”. This created a starting point for class discussions of field safety, communication, and planning, and students shared that they felt newly empowered to ask about field safety plans in upcoming internships, courses, or field-based research.</p>
 								<p>I am continuing to seek funding to offer these and other kinds of field safety trainings in future courses and to reduce costs of field courses for students. Please reach out if you’d like to chat!</p>
 							</article>
