--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								<h2 class="major">Teaching</h2>
 								<span class="image main"><img src="images/20220420_162902.jpeg" alt="" /></span>
 								<p>Nothing motivates me more than teaching and learning alongside students. Field experiences were transformative for me as an undergrad, and I love getting out into field with classes as much as possible. Across all my classes, I encourage independent inquiry, place-based learning, enthusiasm, and an ethic of care for each other and our world.  </p>
-								<p>The heart of my job is teaching undergraduate courses in soils and environmental chemistry in the Environmenetal Studies Program at UCSB, where a number of my classes are cross-listed in Geography. Presently, I teach the following courses:</p>
+								<p>The heart of my job is teaching undergraduate courses in soils and environmental chemistry in the Environmental Studies Program at UCSB, where a number of my classes are cross-listed in Geography. Presently, I teach the following courses:</p>
 									<ul>
 										<li>Principles of Soil Science (ENVS/GEOG 114A)</li>
 										<li>Soils of California: Formation, Morphology, and Management (ENVS/GEOG 114B)</li>
@@ -96,7 +96,7 @@
 										<li>Soil Genesis, Morphology, and Classification</li>
 									</ul>
 								</p>
-								<p>Whether taking students to describe their first soil pits mere steps from their dorms or teaching about terrestrial carbon storage amidst giant sequoias, I emphasize inclusive, place-based learning that starts with safe field environments. The field continues to be a frequent site of racism, sexism, and ableism, and unequal support for underrepresented students contributes to hostile exclusion from majors, internships, and jobs.</p>
+								<p>Whether taking students to describe their first soil pits mere steps from their dorms or teaching about terrestrial carbon storage amidst giant sequoias, I emphasize inclusive, place-based learning that starts with safe field environments. The field continues to be a frequent site of racism, sexism, and ableism. Additionally, unequal support for underrepresented students contributes to hostile exclusion from majors, internships, and jobs. Changing these dynamics requires systematic changes to how we conduct fieldwork, especially from those of us who teach and work with students in the field. </p>
 								<p>This spring, I secured funding for <a href="https://www.fieldfutures.org/">FieldFutures</a> training for one class. In a post-training survey, 91% of students said they anticipate this training definitely being valuable or useful in their future work. One student shared that the training “provided a lot of information that can be generalized to other aspects of field work such as safety, power dynamics, and following proper protocol”. This created a starting point for class discussions of field safety, communication, and planning, and students shared that they felt newly empowered to ask about field safety plans in upcoming internships, courses, or field-based research.</p>
 								<p>I am continuing to seek funding to offer these and other kinds of field safety trainings in future courses and to reduce costs of field courses for students. Please reach out if you’d like to chat!</p>
 							</article>
